--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class = "container">
-            <div class="sidebar">
+            <div class="sidebar sidebarGo">
                 <nav>
                     <ul>
                         <li><a href="/">Home</a></li>
@@ -22,6 +22,10 @@
                 </nav>
             </div>
             <div class = "main">
+                <div class="hamburger">
+                    <img class="ham" src="hamburger.png" alt="" width="23px">
+                    <img class="cross" src="cross-23.png" alt="" width="23px">
+                </div>
                 <div class = "blogContainer">
                     <h1>My Blog</h1>
                     <div class="blogItem">
@@ -47,6 +51,7 @@
                 </div>
             </div>
         </div>
+        <script src="script.js"></script>
             
     </body>
 </html>
