--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class = "container">
-            <div class="sidebar">
+            <div class="sidebar sidebarGo">
                 <nav>
                     <ul>
                         <li><a href="/">Home</a></li>
@@ -22,6 +22,10 @@
                 </nav>
             </div>
             <div class = "main">
+              <div class="hamburger">
+                    <img class="ham" src="hamburger.png" alt="" width="23px">
+                    <img class="cross" src="cross-23.png" alt="" width="23px">
+                </div>
                 <div class="contactform">
                     <h1>Contact Me for Work/General Enquiries</h1>                    
                     <form>
@@ -51,6 +55,7 @@
                 </div>
             </div>
         </div>
+        <script src="script.js"></script>
             
     </body>
 </html>
