--- a/intro.html
+++ b/intro.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <div class="sidebar">
+        <div class="sidebar sidebarGo">
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
@@ -24,6 +24,10 @@
             </nav>
         </div>
         <div class="main">
+            <div class="hamburger">
+                    <img class="ham" src="hamburger.png" alt="" width="23px">
+                    <img class="cross" src="cross-23.png" alt="" width="23px">
+                </div>
             <div class="intro">
 
 
@@ -49,6 +53,7 @@
 
         </div>
     </div>
+    <script src="script.js"></script>
 
 </body>
 
