--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <div class = "hello"> Hi I am </div>
                         <div class = "name"> Prince Nath </div>
                         <div class = "about"> Web developer and Android App developer </div>
-                        <div class = "moreabout">I am a web developer with a passion for creating dynamic and responsive websites </div>
+                        <!-- <div class = "moreabout">I am a web developer with a passion for creating dynamic and responsive websites </div> -->
                         <div class = "buttons">
                             <a href="PrinceNathResume.pdf" target="_blank">
                                 <button class="btn">Download CV</button></a>
